added face recognizer system
click n to enroll face - only takes one frame. need to train many many more times for just one person. controls work well

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,12 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Local face data & model (keep private / large)
+faces_db/
+lbph_model.xml
+labels.json
+
+# OS junk (safe to ignore)
+Thumbs.db
+.DS_Store
